--- a/app/assets/stylesheets/gentelella-custom.scss
+++ b/app/assets/stylesheets/gentelella-custom.scss
@@ -471,7 +471,7 @@ body .container.body .right_col {
     color: #fff
 }
 .container {
-    width: 100%;
+    width: 100% !important;
     padding: 0
 }
 .navbar-nav>li>a,
