--- a/app/views/startpages/main.html.erb
+++ b/app/views/startpages/main.html.erb
@@ -2,7 +2,7 @@
 <header id="header_outer">
   <div class="container">
     <div class="header_section">
-      <div class="logo"><a href="javascript:void(0)"><img src="img/logob.png" alt=""></a></div>
+      <div class="logo"><a href="javascript:void(0)"><img src="<%= image_path('butterlfly/logob.png') %>" alt=""></a></div>
       <nav class="nav" id="nav">
         <ul class="toggle">
           <li><a href="#top_content">Home</a></li>
@@ -181,7 +181,7 @@
 
       <!-- Portfolio Item With PrettyPhoto  -->
       <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   videography isotope-item">
-        <div class="portfolio-image"> <img src="img/portfolio_pic1.jpg"  alt="Portfolio 1"> </div>
+        <div class="portfolio-image"> <img src="<%= image_path('butterlfly/portfolio_pic1.jpg') %>"  alt="Portfolio 1"> </div>
         <a title="Starbucks Coffee" rel="prettyPhoto[galname]" href="http://clapat.ro/themes/newave/images/portfolio/portfolio2.jpg">
         <div class="project-overlay">
           <div class="project-info">
@@ -195,7 +195,7 @@
 
       <!-- Portfolio Item Video Expander  -->
       <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  design isotope-item">
-        <div class="portfolio-image"> <img src="img/portfolio_pic2.jpg" alt="Portfolio 1"> </div>
+        <div class="portfolio-image"> <img src="<%= image_path('butterlfly/portfolio_pic2.jpg') %>" alt="Portfolio 1"> </div>
         <div class="project-overlay">
           <div class="open-project-link"> <a class="open-project" href="http://clapat.ro/themes/newave/project-video-expander.html" title="Open Project"></a> </div>
           <div class="project-info">
@@ -209,7 +209,7 @@
 
       <!-- Portfolio Item Normal Expander -->
       <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  design  isotope-item">
-        <div class="portfolio-image"> <img src="img/portfolio_pic3.jpg" alt="Portfolio 1"> </div>
+        <div class="portfolio-image"> <img src="<%= image_path('butterlfly/portfolio_pic3.jpg') %>" alt="Portfolio 1"> </div>
         <div class="project-overlay">
           <div class="open-project-link"> <a class="open-project" href="http://clapat.ro/themes/newave/project-normal-expander-1.html" title="Open Project"></a> </div>
           <div class="project-info">
@@ -223,7 +223,7 @@
 
       <!-- Portfolio Item FullScreen Expander -->
       <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(1011px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  photography  branding web isotope-item">
-        <div class="portfolio-image"> <img src="img/portfolio_pic4.jpg" alt="Portfolio 1"> </div>
+        <div class="portfolio-image"> <img src="<%= image_path('butterlfly/portfolio_pic4.jpg') %>" alt="Portfolio 1"> </div>
         <div class="project-overlay">
           <div class="open-project-link"> <a class="open-project" href="http://clapat.ro/themes/newave/project-fullscreen-expander-1.html" title="Open Project"></a> </div>
           <div class="project-info">
@@ -237,7 +237,7 @@
 
       <!-- Portfolio Item FullScreen Expander -->
       <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  design isotope-item">
-        <div class="portfolio-image"> <img src="img/portfolio_pic5.jpg" alt="Portfolio 1"> </div>
+        <div class="portfolio-image"> <img src="<%= image_path('butterlfly/portfolio_pic5.jpg') %>" alt="Portfolio 1"> </div>
         <div class="project-overlay">
           <div class="open-project-link"> <a class="open-project" href="http://clapat.ro/themes/newave/project-fullscreen-expander-2.html" title="Open Project"></a> </div>
           <div class="project-info">
@@ -251,7 +251,7 @@
 
       <!-- Portfolio Item Normal Expander -->
       <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  web isotope-item">
-        <div class="portfolio-image"> <img src="img/portfolio_pic6.jpg" alt="Portfolio 1"> </div>
+        <div class="portfolio-image"> <img src="<%= image_path('butterlfly/portfolio_pic6.jpg') %>" alt="Portfolio 1"> </div>
         <div class="project-overlay">
           <div class="open-project-link"> <a class="open-project" href="http://clapat.ro/themes/newave/project-normal-expander-2.html" title="Open Project"></a> </div>
           <div class="project-info">
@@ -265,7 +265,7 @@
 
       <!-- Portfolio Item External Project  -->
       <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  design web isotope-item">
-        <div class="portfolio-image"> <img src="img/portfolio_pic7.jpg" alt="Portfolio 1"> </div>
+        <div class="portfolio-image"> <img src="<%= image_path('butterlfly/portfolio_pic7.jpg') %>" alt="Portfolio 1"> </div>
         <a href="http://clapat.ro/themes/newave/project-external-1.html" class="external">
         <div class="project-overlay">
           <div class="project-info">
@@ -279,7 +279,7 @@
 
       <!-- Portfolio Item With PrettyPhoto  -->
       <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(1011px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   photography isotope-item">
-        <div class="portfolio-image"> <img src="img/portfolio_pic8.jpg" alt="Portfolio 1"> </div>
+        <div class="portfolio-image"> <img src="<%= image_path('butterlfly/portfolio_pic8.jpg') %>" alt="Portfolio 1"> </div>
         <a title="Stereo Headphones" rel="prettyPhoto[galname]" href="http://clapat.ro/themes/newave/images/portfolio/portfolio8.jpg">
         <div class="project-overlay">
           <div class="project-info">
@@ -328,23 +328,23 @@
   <div class="client_area ">
     <div class="client_section animated  fadeInUp wow">
       <div class="client_profile">
-        <div class="client_profile_pic"><img src="img/client-pic1.jpg" alt=""></div>
+        <div class="client_profile_pic"><img src="<%= image_path('butterlfly/client-pic1.jpg') %>" alt=""></div>
         <h3>Saul Goodman</h3>
         <span>Lawless Inc</span> </div>
       <div class="quote_section">
         <div class="quote_arrow"></div>
-        <p><b><img src="img/quote_sign_left.png" alt=""></b> Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper. <small><img src="img/quote_sign_right.png" alt=""></small> </p>
+        <p><b><img src="<%= image_path('butterlfly/quote_sign_left.png') %>" alt=""></b> Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper. <small><img src="<%= image_path('butterlfly/quote_sign_right.png') %>" alt=""></small> </p>
       </div>
       <div class="clear"></div>
     </div>
     <div class="client_section animated  fadeInDown wow">
       <div class="client_profile flt">
-        <div class="client_profile_pic"><img src="img/client-pic2.jpg" alt=""></div>
+        <div class="client_profile_pic"><img src="<%= image_path('butterlfly/client-pic2.jpg') %>" alt=""></div>
         <h3>Marie Schrader</h3>
         <span>DEA Foundation</span> </div>
       <div class="quote_section flt">
         <div class="quote_arrow2"></div>
-        <p><b><img src="img/quote_sign_left.png" alt=""></b> Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper. <small><img src="img/quote_sign_right.png" alt=""></small> </p>
+        <p><b><img src="<%= image_path('butterlfly/quote_sign_left.png') %>" alt=""></b> Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper. <small><img src="<%= image_path('butterlfly/quote_sign_right.png') %>" alt=""></small> </p>
       </div>
       <div class="clear"></div>
     </div>
@@ -355,10 +355,10 @@
 <div class="c-logo-part"><!--c-logo-part-start-->
   <div class="container">
     <ul class="delay-06s animated  bounce wow">
-      <li><a href="javascript:void(0)"><img src="img/c-liogo1.png" alt=""></a></li>
-      <li><a href="javascript:void(0)"><img src="img/c-liogo2.png" alt=""></a></li>
-      <li><a href="javascript:void(0)"><img src="img/c-liogo3.png" alt=""></a></li>
-      <li><a href="javascript:void(0)"><img src="img/c-liogo5.png" alt=""></a></li>
+      <li><a href="javascript:void(0)"><img src="<%= image_path('butterlfly/c-liogo1.png') %>" alt=""></a></li>
+      <li><a href="javascript:void(0)"><img src="<%= image_path('butterlfly/c-liogo2.png') %>" alt=""></a></li>
+      <li><a href="javascript:void(0)"><img src="<%= image_path('butterlfly/c-liogo3.png') %>" alt=""></a></li>
+      <li><a href="javascript:void(0)"><img src="<%= image_path('butterlfly/c-liogo4.png') %>" alt=""></a></li>
     </ul>
   </div>
 </div>
@@ -371,7 +371,7 @@
       <div class="team-leader-box">
         <div class="team-leader wow fadeInDown delay-03s">
           <div class="team-leader-shadow"><a href="javascript:void(0)"></a></div>
-          <img src="img/team-leader-pic1.jpg" alt="">
+          <img src="<%= image_path('butterlfly/team-leader-pic1.jpg') %>" alt="">
           <ul>
             <li><a href="javascript:void(0)" class="fa-twitter"></a></li>
             <li><a href="javascript:void(0)" class="fa-facebook"></a></li>
@@ -386,7 +386,7 @@
       <div class="team-leader-box">
         <div class="team-leader  wow fadeInDown delay-06s">
           <div class="team-leader-shadow"><a href="javascript:void(0)"></a></div>
-          <img src="img/team-leader-pic2.jpg" alt="">
+          <img src="<%= image_path('butterlfly/team-leader-pic2.jpg') %>" alt="">
           <ul>
             <li><a href="javascript:void(0)" class="fa-twitter"></a></li>
             <li><a href="javascript:void(0)" class="fa-facebook"></a></li>
@@ -401,7 +401,7 @@
       <div class="team-leader-box">
         <div class="team-leader wow fadeInDown delay-09s">
           <div class="team-leader-shadow"><a href="javascript:void(0)"></a></div>
-          <img src="img/team-leader-pic3.jpg" alt="">
+          <img src="<%= image_path('butterlfly/team-leader-pic3.jpg') %>" alt="">
           <ul>
             <li><a href="javascript:void(0)" class="fa-twitter"></a></li>
             <li><a href="javascript:void(0)" class="fa-facebook"></a></li>
@@ -528,34 +528,34 @@
       }
     );
     wow.init();
-    document.getElementById('').onclick = function() {
-      var section = document.createElement('section');
-      section.className = 'wow fadeInDown';
-    section.className = 'wow shake';
-    section.className = 'wow zoomIn';
-    section.className = 'wow lightSpeedIn';
-      this.parentNode.insertBefore(section, this);
-    };
+    // document.getElementById('').onclick = function() {
+    //   var section = document.createElement('section');
+    //   section.className = 'wow fadeInDown';
+    // section.className = 'wow shake';
+    // section.className = 'wow zoomIn';
+    // section.className = 'wow lightSpeedIn';
+    //   this.parentNode.insertBefore(section, this);
+    // };
   </script>
-<script type="text/javascript">
-  $(window).load(function(){
+// <script type="text/javascript">
+//   $(window).load(function(){
 
-    $('a').bind('click',function(event){
-      var $anchor = $(this);
+//     $('a').bind('click',function(event){
+//       var $anchor = $(this);
 
-      $('html, body').stop().animate({
-        scrollTop: $($anchor.attr('href')).offset().top - 91
-      }, 1500,'easeInOutExpo');
-      /*
-      if you don't want to use the easing effects:
-      $('html, body').stop().animate({
-        scrollTop: $($anchor.attr('href')).offset().top
-      }, 1000);
-      */
-      event.preventDefault();
-    });
-  })
-</script>
+//       $('html, body').stop().animate({
+//         scrollTop: $($anchor.attr('href')).offset().top - 91
+//       }, 1500,'easeInOutExpo');
+//       /*
+//       if you don't want to use the easing effects:
+//       $('html, body').stop().animate({
+//         scrollTop: $($anchor.attr('href')).offset().top
+//       }, 1000);
+//       */
+//       event.preventDefault();
+//     });
+//   })
+// </script>
 
 <script type="text/javascript">
 
