--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,134 +12,27 @@
     <div class="col-md-3 left_col">
       <div class="left_col scroll-view">
         <div class="navbar nav_title" style="border: 0;">
-          <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
+          <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>LearnPlatform!</span></a>
         </div>
-
         <div class="clearfix"></div>
 
-        <!-- menu profile quick info -->
-        <div class="profile clearfix">
-          <div class="profile_pic">
-            <img src="<%= image_path('butterlfly/team-leader-pic2.jpg')%>" alt="..." class="img-circle profile_img">
-          </div>
-          <div class="profile_info">
-            <span>Welcome,</span>
-            <h2>John Doe</h2>
-          </div>
-        </div>
-        <!-- /menu profile quick info -->
+        <%= render "layouts/quick_info" %>
 
         <br />
 
-        <!-- sidebar menu -->
-        <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-          <div class="menu_section">
-            <h3>General</h3>
-            <ul class="nav side-menu">
-              <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                  <li><a href="index.html">Dashboard</a></li>
-                  <li><a href="index2.html">Dashboard2</a></li>
-                  <li><a href="index3.html">Dashboard3</a></li>
-                </ul>
-              </li>
-              <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                  <li><a href="form.html">General Form</a></li>
-                  <li><a href="form_advanced.html">Advanced Components</a></li>
-                  <li><a href="form_validation.html">Form Validation</a></li>
-                  <li><a href="form_wizards.html">Form Wizard</a></li>
-                  <li><a href="form_upload.html">Form Upload</a></li>
-                  <li><a href="form_buttons.html">Form Buttons</a></li>
-                </ul>
-              </li>
-              <li><a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                  <li><a href="general_elements.html">General Elements</a></li>
-                  <li><a href="media_gallery.html">Media Gallery</a></li>
-                  <li><a href="typography.html">Typography</a></li>
-                  <li><a href="icons.html">Icons</a></li>
-                  <li><a href="glyphicons.html">Glyphicons</a></li>
-                  <li><a href="widgets.html">Widgets</a></li>
-                  <li><a href="invoice.html">Invoice</a></li>
-                  <li><a href="inbox.html">Inbox</a></li>
-                  <li><a href="calendar.html">Calendar</a></li>
-                </ul>
-              </li>
-              <li><a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                  <li><a href="tables.html">Tables</a></li>
-                  <li><a href="tables_dynamic.html">Table Dynamic</a></li>
-                </ul>
-              </li>
-              <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                  <li><a href="chartjs.html">Chart JS</a></li>
-                  <li><a href="chartjs2.html">Chart JS2</a></li>
-                  <li><a href="morisjs.html">Moris JS</a></li>
-                  <li><a href="echarts.html">ECharts</a></li>
-                  <li><a href="other_charts.html">Other Charts</a></li>
-                </ul>
-              </li>
-              <li><a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                  <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                  <li><a href="fixed_footer.html">Fixed Footer</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- /sidebar menu -->
+      <%= render "layouts/sidebar_menu" %>
+
       </div>
     </div>
 
-    <!-- top navigation -->
-    <div class="top_nav">
-      <div class="nav_menu">
-        <nav>
-          <div class="nav toggle">
-            <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-          </div>
+    <%= render "layouts/top_navigation" %>
 
-          <ul class="nav navbar-nav navbar-right">
-            <li class="">
-              <a class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                <img src="<%= image_path('butterlfly/team-leader-pic2.jpg')%>" alt="">John Doe
-              </a>
-              <ul class="dropdown-menu dropdown-usermenu pull-right">
-                <li><a href="javascript:;"> Profile</a></li>
-                <li>
-                  <a href="javascript:;">
-                    <span class="badge bg-red pull-right">50%</span>
-                    <span>Settings</span>
-                  </a>
-                </li>
-                <li><a href="javascript:;">Help</a></li>
-                <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
-              </ul>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-    <!-- /top navigation -->
-
-    <!-- page content -->
     <div class="right_col" role="main">
       <%= yield %>
     </div>
-    <!-- /page content -->
 
-    <!-- footer content -->
-    <footer>
-      <div class="pull-right">
-        Jakiś tekst - albo i nie
-        Może linki do fb itp
-      </div>
-      <div class="clearfix"></div>
-    </footer>
-    <!-- /footer content -->
+    <%= render "layouts/footer" %>
+
   </div>
 </div>
 
